<resources>
    <string name="app_name">Layout</string>
    <string name="space_stations">Space Station</string>
    <string name="flights">Flights</string>
    <string name="rovers">Rovers</string>
    <string name="mars">Mars</string>
    <string name="oneway">One Way</string>
    <string name="traveller">Traveller</string>
    <string name="enter_email">Enter Email</string>
    <string name="messages">MESSAGES</string>
    <string name="email">EMAIL</string>
    <string name="dial">DIAL</string>
    <string name="url">URL</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="submit_successfully">Submit Successfully</string>
    <string name="at_least_6_numbers">at least 6 numbers</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
</resources>