<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:id="@+id/btnMessages"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/btnEmail"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dial"
            android:id="@+id/btnDial"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="20sp"
             />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:id="@+id/btnUrl"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="20sp"
             />

    </LinearLayout>
</layout>